B&L QA/objects/Action_Plan__c.object
<CustomObject>
    <description>Related list on the account for Customers Action plan</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Ties the action plan to an account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Action Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actions__c</fullName>
        <label>Actions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Action Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_and_Month__c</fullName>
        <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName &amp; &quot; - &quot; &amp; TEXT(Month__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact and Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Strategy_Objectives__c</fullName>
        <label>Customer Strategy/Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Territory_Manager__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; &amp; Account__r.Primary_Sales_Rep__r.Id , Account__r.Primary_Sales_Rep__r.FirstName &amp; &apos; &apos; &amp; Account__r.Primary_Sales_Rep__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Territory Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Focus__c</fullName>
        <label>Product Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANT - Instruments</fullName>
                </value>
                <value>
                    <fullName>ANT - Millennium Anterior</fullName>
                </value>
                <value>
                    <fullName>ANT - Stellaris Anterior</fullName>
                </value>
                <value>
                    <fullName>FEMTO - Victus</fullName>
                </value>
                <value>
                    <fullName>IOL - Akreos  Adapt</fullName>
                </value>
                <value>
                    <fullName>IOL - Akreos AO</fullName>
                </value>
                <value>
                    <fullName>IOL - Akreos MICS</fullName>
                </value>
                <value>
                    <fullName>IOL - Crystalens AO</fullName>
                </value>
                <value>
                    <fullName>IOL - Crystalens HD</fullName>
                </value>
                <value>
                    <fullName>IOL - enVista</fullName>
                </value>
                <value>
                    <fullName>IOL - enVista Toric</fullName>
                </value>
                <value>
                    <fullName>IOL - INCISE</fullName>
                </value>
                <value>
                    <fullName>IOL - Other</fullName>
                </value>
                <value>
                    <fullName>IOL - PMMA</fullName>
                </value>
                <value>
                    <fullName>IOL - SofPort</fullName>
                </value>
                <value>
                    <fullName>MEX enVista Platform</fullName>
                </value>
                <value>
                    <fullName>MEX Incise Platform</fullName>
                </value>
                <value>
                    <fullName>MEX TSV Platform</fullName>
                </value>
                <value>
                    <fullName>MEX Victus Platform</fullName>
                </value>
                <value>
                    <fullName>OTHER - Balanced Salt Solutions</fullName>
                </value>
                <value>
                    <fullName>OTHER - Custom Pack/Trays</fullName>
                </value>
                <value>
                    <fullName>Other - Eye Order</fullName>
                </value>
                <value>
                    <fullName>Other - IOL Physiol</fullName>
                </value>
                <value>
                    <fullName>Other - Leica Microscope</fullName>
                </value>
                <value>
                    <fullName>POST - Millennium Posterior</fullName>
                </value>
                <value>
                    <fullName>POST - MVE</fullName>
                </value>
                <value>
                    <fullName>POST - PF DK-line/Okta-line</fullName>
                </value>
                <value>
                    <fullName>POST - Silicone Oil</fullName>
                </value>
                <value>
                    <fullName>POST - Stellaris Posterior</fullName>
                </value>
                <value>
                    <fullName>POST - Vitreoretinal Instruments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013/Q1</fullName>
                </value>
                <value>
                    <fullName>2013/Q2</fullName>
                </value>
                <value>
                    <fullName>2013/Q3</fullName>
                </value>
                <value>
                    <fullName>2013/Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarter_and_Product_Focus__c</fullName>
        <formula>TEXT (Quarter__c) &amp; &quot; - &quot; &amp; TEXT (Product_Focus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter and Product Focus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <label>Review</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SetID__c</fullName>
        <description>Displays the SetID from Account Object</description>
        <formula>Account__r.SETID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SetID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Achieved</fullName>
                </value>
                <value>
                    <fullName>Not Achieved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Action Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Action Plan Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plans</pluralLabel>
    <recordTypes>
        <fullName>EMEASU</fullName>
        <active>true</active>
        <label>EMEASU</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>